# ML-Docs

./: pyproject.toml
ml_docs/: Home.py
ml_docs/pages/: Regression.py
